--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@types/node": "^10.11.7",
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.9",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.3",
+    "cross-env": "^5.2.0",
+    "ts-jest": "^23.10.4",
+    "fork-ts-checker-webpack-plugin": "^0.4.10",
+    "jest": "^23.6.0"
   }
 }
