--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "^4.0.8"
   },
   "scripts": {
     "setup": "npm install",
@@ -22,10 +22,7 @@
     "@types/node": "^10.11.7",
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.9",
-    "typescript": "^3.1.3",
     "cross-env": "^5.2.0",
-    "ts-jest": "^23.10.4",
-    "fork-ts-checker-webpack-plugin": "^0.4.10",
-    "jest": "^23.6.0"
+    "typescript": "^3.1.3"
   }
 }
