--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "@types/react-dom": "^16.0.9",
     "cross-env": "^5.2.0",
     "typescript": "^3.1.3"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
