--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts-ts": "^4.0.8"
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-scripts-ts": "^4.0.8",
+    "braces": "^2.3.2"
   },
   "scripts": {
     "setup": "npm install",
@@ -21,12 +22,13 @@
     "node": "8.11.4"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.5",
-    "@types/node": "^10.11.7",
-    "@types/react": "^16.4.16",
-    "@types/react-dom": "^16.0.9",
+    "@types/jest": "^23.3.14",
+    "@types/node": "^10.12.27",
+    "@types/react": "^16.8.4",
+    "@types/react-dom": "^16.8.2",
     "cross-env": "^5.2.0",
-    "typescript": "^3.1.3"
+    "typescript": "^3.3.3333",
+    "webpack-dev-server": "^3.2.1"
   },
   "browserslist": [
     ">0.2%",
